# FA-Report-System

./: README.md
backend/: Dockerfile  main.py  nixpacks.toml  pyproject.toml
backend/app/api/routes/: catalog.py  images.py  pdf.py  reports.py  test_results.py  users.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: __init__.py  audit_log.py  electrical_test.py  report.py  report_image.py  test_result.py  user.py
backend/app/pdf_engine/: engine.py  image_processor.py  pdf_coordinates.json
backend/app/schemas/: report.py  report_image.py  test_result.py
backend/app/services/: image_service.py  pdf_service.py  report_service.py  test_service.py
backend/migrations/: 001_initial_schema.sql  002_seed_data.sql
backend/scripts/: upload_template.py  verify_coordinates.py
backend/tests/: conftest.py  test_endpoints.py
docs/: project_structure.txt  railway_deploy_guide.txt
